...
  "select-backup-dir": ["folder.fill", "blue"],
  "change-backup-dir": ["folder.fill", "blue"],
  "enable-backup-encryption": ["lock.fill", "teal"],
  "restore-backup": ["arrow.counterclockwise.circle.fill", "teal"],
  "export-notes": ["square.and.arrow.up.fill", "blue"],
  "notification-notes": ["note.text.badge.plus", "orange"],
  "task-notifications-ios": ["bell.badge.fill", "red"],
  reminders: ["bell.fill", "red"],
  "enable-reminders": ["bell", "red"],
  "snooze-time": ["zzz", "indigo"],
  "reminder-sound-ios": ["speaker.wave.2.fill", "pink"],
  "reminder-sound-android": ["speaker.wave.2.fill", "pink"],
  debugging: ["ladybug.fill", "gray"],
...
