...
            >
              {strings.save()}
            </Text>
          </Pressable>
        </View>
        <ScrollView
          testID="task-list-customization-scroll"
          keyboardShouldPersistTaps="handled"
          contentContainerStyle={{ padding: 20, paddingBottom: 50 }}
        >
          <View style={{ alignItems: "center", paddingVertical: 22 }}>
            <View
              style={{
...
